fix bugs on mobile

--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ main {
 @media only screen and (max-width: 600px) {
     main {
         flex-direction: column;
+        width: 100vw;
+        height: 100vh;
     }
     .left > h1 {
         display: none;
